[gd_scene load_steps=2 format=3 uid="uid://2pvddy6o1343"]

[ext_resource type="Script" path="res://addons/send-feedback/feedback.gd" id="1_1tstl"]

[node name="feedback" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_1tstl")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonSend" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "send"

[node name="LabelRequestMessage" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonClose" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="TextEditFeedback" type="TextEdit" parent="CenterContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(512, 64)
layout_mode = 2
wrap_mode = 1
autowrap_mode = 2

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/ButtonSend" to="." method="_on_button_send_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/ButtonClose" to="." method="_on_button_close_pressed"]
